# AI-SIMULATE

./: README.md  pyproject.toml  run.sh
configs/: README.md
configs/experiments/: gb300_deepseek_v3_inference_fp8_tp8_pp9_bs1_in4k_out512.json
configs/strategy/: gb300_tp8_pp9_dp1.json
configs/system/: README.md
configs/system/chip_config/: GB300.json
configs/system/topo_config/: GB300.json
configs/workload/: deepseek_v3_inference_fp8_bs1_in4k_out512.json
results/gb300_deepseek_v3_inference_fp8_tp8_pp9_bs1_in4k_out512/: chrome_trace.json  chrome_trace_decode.json  chrome_trace_prefill.json  decode_curve.csv  end_to_end_summary.json  meta_hook_analysis.json  meta_hook_analysis_decode.json  meta_hook_analysis_prefill.json  op_trace.csv  op_trace_decode.csv  op_trace_prefill.csv
scripts/: run_meta_analysis.py
src/ai_simulate/: __init__.py
src/ai_simulate/analysis/: __init__.py  meta_hook_analyzer.py
src/ai_simulate/core/: __init__.py  config.py  op_record.py
src/ai_simulate/custom/: __init__.py  cost_model.py  fc2.py  registry.py
src/ai_simulate/roofline/: __init__.py  estimator.py  op_costs.py  operator_registry.py
src/ai_simulate/simulator/: __init__.py  experiment_runner.py
src/ai_simulate/workload/: __init__.py  deepseek_v3_proxy.py  torch_capture.py
tests/integration/: test_run_meta_analysis.py
tests/unit/: test_config.py  test_meta_hook_analyzer.py  test_op_record.py  test_operator_registry.py  test_torch_capture.py
