[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-simulate"
version = "0.1.0"
description = "AI workload simulation prototypes and analysis tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
